2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/binarization/internal/sauvola_ms_functor.hh: Use C8
	neighborhood for labeling.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/binarization/sauvola_ms.hh: More fixes in debug.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix warning in Otsu related files.

	* scribo/binarization/otsu_threshold.hh,
	* src/binarization/otsu.cc: Here.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix and improve sauvola_ms debug.

	* scribo/binarization/internal/local_threshold_core.hh,
	* scribo/binarization/internal/local_threshold_debug.hh,
	* scribo/binarization/internal/sauvola_ms_functor.hh,
	* scribo/binarization/sauvola_ms.hh,
	* src/binarization/sauvola_ms_debug.cc: Here.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix invalid line offset due to input image size.

	* scribo/binarization/internal/niblack_functor.hh,
	* scribo/binarization/internal/sauvola_functor.hh: Here.

	* tests/binarization/niblack.cc,
	* tests/binarization/niblack_weven_hodd.ref.pbm,
	* tests/binarization/niblack_wodd_heven.ref.pbm,
	* tests/binarization/niblack_wodd_hodd.ref.pbm,
	* tests/binarization/sauvola.cc,
	* tests/binarization/sauvola_ms.cc,
	* tests/binarization/sauvola_ms_weven_hodd.ref.pbm,
	* tests/binarization/sauvola_ms_wodd_heven.ref.pbm,
	* tests/binarization/sauvola_ms_wodd_hodd.ref.pbm,
	* tests/binarization/sauvola_weven_hodd.ref.pbm,
	* tests/binarization/sauvola_wodd_heven.ref.pbm,
	* tests/binarization/sauvola_wodd_hodd.ref.pbm,
	* tests/img/lena_weven_hodd.pgm,
	* tests/img/lena_wodd_heven.pgm,
	* tests/img/lena_wodd_hodd.pgm: Add test case.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix binarization tests.

	* sauvola_fast.cc,
	* scribo/binarization/internal/local_threshold_core.hh,
	* tests/binarization/niblack.cc,
	* tests/binarization/niblack.ref.pbm,
	* tests/binarization/sauvola.cc,
	* tests/binarization/sauvola.ref.pbm: Here.
